--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <activity android:name=".ui.RestaurantDetailActivity" />
 
-        <receiver android:name=".Widget.MenuWidgetProvider">
+        <receiver android:name=".widget.MenuWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -37,9 +37,9 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/menu_widget_info" />
         </receiver>
-        <service android:name=".Widget.WidgetService"
+        <service android:name=".widget.WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS"/>
-        <service android:name=".Widget.UpdateWidgetsService" />
+        <service android:name=".widget.UpdateWidgetsService" />
     </application>
 
 </manifest>
